# nlp-authorship-attribution

./: .gitignore  BERT_Studies.ipynb  attention.py  babi_data_processing.py  babi_download.py  doc_embedding.py  download.py  extract.py  main.py  mlp_attention.py  movie_sentiment_classification.py  pyproject.toml  skipgrams.py  text_embedding.py  text_processing.py  yelp_restaurant_sentiments_review_doc2vec.ipynb  yelp_review_sentiment_dataset_download.py
docs/tutorials/: classify_text_with_bert.ipynb
